# crest-test

./: Product Management API - Local.postman_environment.json  Product Management API.postman_collection.json  README.md  db.sqlite3  pyproject.toml  pytest.ini
apps/authentication/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py
apps/core/: middleware.py  models.py
apps/products/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py
config/: settings.py  urls.py
